--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE=http://localhost:5000
-REACT_APP_SOCKET_SERVER=http://localhost:5000
+REACT_APP_API_BASE=https://videoconnect-j10j.onrender.com
+REACT_APP_SOCKET_SERVER=https://videoconnect-j10j.onrender.com
